--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinxcontrib-video
+          pip install sphinx furo myst-parser sphinxcontrib-youtube sphinxcontrib-video
 
 
       - name: Build Sphinx documentation
@@ -37,5 +37,3 @@ jobs:
         with:
           branch: gh-pages
           folder: _build
-          
-
