--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx furo myst-parser sphinxcontrib-video
+          pip install sphinx furo myst-parser sphinxcontrib-youtube spinxcontrib-video
 
 
       - name: Build Sphinx documentation
